# libtyranny

./: README.md  lib.c  main.c  meson.build  tyranny.h
tests/: implicit.yaml  implicit_end.yaml
